Convert NPC AI elements to DR